resources/cf-stacks/security/gateway-security-group.yml
Type: AWS::EC2::SecurityGroup
Properties:
  GroupDescription: Security group for Apollo Gateway Instances
  VpcId: ${self:custom.aws.vpc-id}
  SecurityGroupIngress:
    - IpProtocol: tcp
      FromPort: "4000"
      ToPort: "4000"
      CidrIp: "0.0.0.0/0"
    - IpProtocol: tcp
      FromPort: "22"
      ToPort: "22"
      CidrIp: 0.0.0.0/0
  Tags:
    - Key: "Name"
      Value: "apollo-gateway-instances-${opt:env}"
